src/objects/DataServiceEndpoint__c.object
<CustomObject>
    <description>A child object to DataServiceDefinition that defines a specific end point and communication methodology.</description>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>The parameters and value types that will be passed along the URL line after the endpoint.</description>
        <inlineHelpText>The parameters and value types that will be passed along the URL line after the endpoint.</inlineHelpText>
        <label>Parameters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentService__c</fullName>
        <label>Parent Service</label>
        <referenceTo>DataServiceDefinition__c</referenceTo>
        <relationshipLabel>Endpoints</relationshipLabel>
        <relationshipName>DataServiceEndpoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequestContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The JSON Document describing the request.</description>
        <inlineHelpText>The JSON Document describing the request.</inlineHelpText>
        <label>Request Content</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Data Service Endpoint Requests</relationshipLabel>
        <relationshipName>Data_Service_Endpoint_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestHeaders__c</fullName>
        <description>Headers that must be submitted as part of the request.</description>
        <inlineHelpText>Headers that must be submitted as part of the request.</inlineHelpText>
        <label>Request Headers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The JSON Document that is returned as part of this request.</description>
        <inlineHelpText>The JSON Document that is returned as part of this request.</inlineHelpText>
        <label>Response Content</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Data Service Endpoint Responses</relationshipLabel>
        <relationshipName>Data_Service_Endpoint_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseHeaders__c</fullName>
        <description>The headers that will be returned in the HTTP header.</description>
        <inlineHelpText>The headers that will be returned in the HTTP header.</inlineHelpText>
        <label>Response Headers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Endpoint URL.</description>
        <inlineHelpText>Endpoint URL.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version number of this endpoint.</description>
        <inlineHelpText>The version number of this endpoint.</inlineHelpText>
        <label>Version</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Data Service Endpoint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Service Endpoints</pluralLabel>
    <recordTypes>
        <fullName>DELETE</fullName>
        <active>true</active>
        <label>DELETE</label>
    </recordTypes>
    <recordTypes>
        <fullName>GET</fullName>
        <active>true</active>
        <label>GET</label>
    </recordTypes>
    <recordTypes>
        <fullName>PATCH</fullName>
        <active>true</active>
        <label>PATCH</label>
    </recordTypes>
    <recordTypes>
        <fullName>POST</fullName>
        <active>true</active>
        <label>POST</label>
    </recordTypes>
    <recordTypes>
        <fullName>PUT</fullName>
        <active>true</active>
        <label>PUT</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>